# land_read

./: README.md  test.txt
Maskrcnn_test/: test_convback.py  test_convload.py  test_convrelu.py
aicl_sample/aicl_compile_add/: README.md  README_CN.md
aicl_sample/aicl_compile_add/inc/: op_runner.h
aicl_sample/aicl_compile_add/scripts/: testcase_800.sh
aicl_sample/aicl_compile_add/src/: CMakeLists.txt  aicl_adaptor_iluvatar.cpp  main.cpp  op_runner.cpp
aicl_sample/aicl_compile_and_execute_conv2d/: README.md  README_CN.md
aicl_sample/aicl_compile_and_execute_conv2d/inc/: utils.h
aicl_sample/aicl_compile_and_execute_conv2d/scripts/: computebytf.py  sample_build.sh  sample_run.sh
aicl_sample/aicl_compile_and_execute_conv2d/src/: CMakeLists.txt  aicl_adaptor_iluvatar.cpp  main.cpp  utils.cpp
aicl_sample/aicl_execute_add/: README.md  README_CN.md
aicl_sample/aicl_execute_add/inc/: common.h  op_runner.h  operator_desc.h
aicl_sample/aicl_execute_add/scripts/: gen_opModel.py  sample_run.sh
aicl_sample/aicl_execute_add/src/: CMakeLists.txt  aicl_adaptor_iluvatar.cpp  main.cpp  op_runner.cpp  operator_desc.cpp
aicl_sample/compileByPy/: conv2d_HWIO.py  json_export.py
aicl_sample/memcpy_host_device/: CMakeLists.txt  README_CN.md
aicl_sample/memcpy_host_device/scripts/: sample_build.sh  sample_run.sh
aicl_sample/memcpy_host_device/src/: CMakeLists.txt  aicl_adaptor_iluvatar.cpp  memcpy_host_device.cpp  memcpy_host_device.h
aicl_sample/memcpy_host_device_async/: CMakeLists.txt
aicl_sample/memcpy_host_device_async/scripts/: sample_build.sh  sample_run.sh
aicl_sample/memcpy_host_device_async/src/: CMakeLists.txt  aicl_adaptor_iluvatar.cpp  async_memcpy_host2device.cpp
aicl_sample/resnet50_firstapp/: README.md  sample_build.sh  sample_run.sh
aicl_sample/resnet50_firstapp/script/: transferPic.py
aicl_sample/resnet50_firstapp/src/: CMakeLists.txt  aicl_adaptor_iluvatar.cpp  main.cpp
aicl_sample/tmp_compile_add/: Makefile  test_relay.cc  tmp_Iluvatar.cc  tmp_vector.cpp
aicl_sample/tmp_compile_add/test_opdesc/: CMakeLists.txt  aicl_adaptor_iluvatar.cpp  common.cpp  op_runner.cpp  operator_desc.cpp  test_opdesc.cpp
cpp_test/: temp.c  test_sm.cpp
cuda_kernel/add_softmax/: bi_kernel.cu  bi_main.cu  nv_kernel.cu  nv_main.cu
cuda_kernel/jit_add_softmax/: bi_kernel.cu  bi_main.cu  nv_kernel.cu  nv_main.cu
cuda_kernel/mul_reduction/: bi_kernel.cu  bi_main.cu  nv_kernel.cu  nv_main.cu
mindspore_lt/: add.cu  test_aot.py  test_hybird.py
mindspore_op/: test_ReduceSum_NWH.py
tvm_igie_case/: test_addcuda.cu
tvm_igie_case/Op_ComExec/: Makefile  add_ComExec.cc  cTensor_ComExec.cc  conv2d_ComExec.cc
tvm_igie_case/add_op/: Makefile  add_ComExec.cc  add_graph.cc  add_memcpy.cc  add_register.cc  aicl.h
tvm_igie_case/conv2d_float/: conv_i3o6.py  tmp_convi3o6.cpp
tvm_igie_case/conv2d_float16/: Makefile  conv_i3o6.py  tmp_convi3o6.cpp
tvm_igie_case/conv2d_float16_bin/: Makefile  conv2d_oihw.cpp  conv2d_oihw.py  conv_i3o6.py  tmp_convi3o6.cpp
tvm_igie_case/conv2d_op/: conv_llvm.cpp  conv_onpy.py
yolov4_test/: test_yolo4.py  yolov4-pacsp.cfg
